Bug 509317 - Floating selection action bar doesn't respond to touch input
Summary: Floating selection action bar doesn't respond to touch input
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-09 18:43 UTC by AppTest
Modified: 2025-10-06 23:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AppTest 2025-09-09 18:43:19 UTC
The latest 5.3 nightlies (as of the time of this post) have that new floating bar when you make a selection. However, it doesn't respond to touch inputs. (That is, tapping on the button with your finger.)


STEPS TO REPRODUCE
1. Make a selection
2. Try to tap a button on the new floating selection bar with your finger

OBSERVED RESULT
No response

EXPECTED RESULT
For the button to be activated when pressed

SOFTWARE/OS VERSIONS
Android 16
Krita 5.3 nightly (latest one at the time of this post)
arm64 apk
Comment 1 Emmet O'Neill 2025-10-06 20:30:25 UTC
Confirming this.
Comment 2 Emmet O'Neill 2025-10-06 23:32:40 UTC
Git commit 7d129ee8c73dd848ae2186880b2cbcc049e619e8 by Emmet O'Neill.
Committed on 06/10/2025 at 23:31.
Pushed by emmetoneill into branch 'master'.

SelectionActionPanel: Fix touch input

This commit adds support for touch events within the selection actions
panel.

M  +6    -3    libs/ui/kis_selection_actions_panel.cpp

https://invent.kde.org/graphics/krita/-/commit/7d129ee8c73dd848ae2186880b2cbcc049e619e8