SelectionActionPanel: Fix touch input

This commit adds support for touch events within the selection actions
panel.

BUG:509317